--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 appsettings.json
-
+*.db
+*.db-shm
+*.db-wal
 # User-specific files
 *.rsuser
 *.suo
